--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   position: fixed;
   top: 0;
-  width: 100vm;
+  width: 100vw;
   height: 50px;
   background-color: #fff;
   border-bottom: 1px solid darkorange;
