work on nav bar links

--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -1,6 +1,7 @@
 .footer {
-  position: bottom;
-  top: 0;
+  position: fixed;
+  left: 0;
+  bottom: 0;
   width: 100vw;
   height: 50px;
   background-color: #fff;
